# SecurePasswd_MGMT

./: .gitignore  AUTHORS.md  AUTHORS_8md.html  CHANGELOG.md  CHANGELOG_8md.html  CITATION.cff  CITATION_8cff.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  CONTRIBUTION.md  CONTRIBUTION_8md.html  Doxyfile  LICENSE  LICENSE.html  Makefile  README.md  README_8md.html  SECURITY.md  SECURITY_8md.html  SecurePasswd_MGMT_winOS_logic_err.txt  TESTING.md  TESTING_8md.html  USER_GUIDE.md  annotated.html  annotated_dup.js  classes.html  database_8c.html  database_8c__incl.map  database_8c__incl.md5  database_8h.html  database_8h.js  database_8h__dep__incl.map  database_8h__dep__incl.md5  database_8h__incl.md5  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  (+64 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-secpasswd.yml  ci.yml  docs.yml  release.yml  security-scanner  security-scanner.yml
api/html/: AUTHORS_8md.html  CITATION_8cff.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  LICENSE.html  README_8md.html  SECURITY_8md.html  annotated.html  classes.html  database_8c.html  database_8c.js  database_8c__incl.md5  database_8h.html  database_8h_source.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  key__derivation_8c.html  key__derivation_8c__incl.map  key__derivation_8c__incl.md5  key__derivation_8h.html  key__derivation_8h_source.html  md_AUTHORS.html  md_CODE__OF__CONDUCT.html  md_CONTRIBUTING.html  md_SECURITY.html  menudata.js  pages.html  password__generator_8c.js  password__generator_8c__incl.map  password__generator_8c__incl.md5  (+24 more)
api/html/search/: all_1.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_a.js  all_d.js  all_f.js  files_3.js  files_5.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  pages_5.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  pages_f.js  searchdata.js  variables_7.js
cli/: CMakeLists.txt  main.c  password_generator.c  password_generator.h
cmake/: WinDeploy.cmake
core/: CMakeLists.txt  database.c  database.h  key_derivation.c  key_derivation.h  password_generator.c  password_generator.h  platform_paths.c  platform_paths.h  pwned_check.c  pwned_check.h  sync_service.c  sync_service.h  totp.c  totp.h
data/: README.md
docs/: CHANGES_SUMMARY.md  README.md  TESTING.md  THREAT_MODEL.md  USER_GUIDE.md  index.html
docs/api/html/: AUTHORS_8md.html  CITATION_8cff.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  LICENSE.html  README_8md.html  SECURITY_8md.html  annotated.html  classes.html  database_8c.html  database_8c.js  database_8c__incl.map  database_8c__incl.md5  database_8h.html  database_8h__incl.map  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  key__derivation_8c.html  key__derivation_8c.js  key__derivation_8h.html  key__derivation_8h__incl.map  md_AUTHORS.html  md_CODE__OF__CONDUCT.html  md_CONTRIBUTING.html  md_SECURITY.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  (+22 more)
docs/api/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_8.js  functions_0.js  functions_1.js  functions_6.js  pages_0.js  pages_1.js  pages_10.js  pages_11.js  pages_12.js  pages_13.js  pages_14.js  pages_2.js  pages_3.js  (+17 more)
gui/: CMakeLists.txt  dark.qss  entrydialog.cpp  entrydialog.h  healthcheckdialog.cpp  healthcheckdialog.h  icons.qrc  light.qss  main.cpp  mainwindow.cpp  mainwindow.h  passworddialog.cpp  passworddialog.h  passwordentry.h  passwordgeneratordialog.cpp  passwordgeneratordialog.h  securepasswd_gui.desktop.in  syncdialog.cpp  syncdialog.h
gui/qrcodegen/: qrcodegen.cpp
lib/: README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_2.js  defines_5.js  files_1.js  files_5.js  files_6.js  files_8.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  (+20 more)
src/: csv_handler.c  csv_handler.h  csv_parser.c  csv_parser.h  data_path.c  data_path.h  encryption.c  encryption.h  main.c  password_generator.c  password_generator.h  securepass_core.c  securepass_core.h  totp.c  totp.h  utils.c  utils.h  version.h
tests/: CMakeLists.txt  test_cmocka.c  test_core.c
